# mh_clickhouse_driver

./: pyproject.toml
mh_clickhouse_driver/: driver.py
tests/: bq_utils.py  generate_fake_df.py  test_bq2ch.py  tests.py
tests/bq_test_data/: 1_plain_table.json  2_simple_nesting.json  3_complex_nesting.json  4_full_example.json
tests/test_data/: livedune_created.csv
